add slider,and other additional changes

--- a/item-pages/Chef Specialties Dishes.html
+++ b/item-pages/Chef Specialties Dishes.html
@@ -87,10 +87,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -112,10 +111,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -136,10 +134,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -162,10 +159,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>10.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -187,10 +183,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -211,10 +206,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -235,10 +229,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -259,10 +252,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -283,10 +275,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -307,10 +298,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -332,10 +322,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -357,10 +346,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -381,10 +369,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -405,10 +392,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -429,10 +415,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -453,10 +438,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>11.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -477,10 +461,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
