--- a/item-pages/European Dishes.html
+++ b/item-pages/European Dishes.html
@@ -55,10 +55,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
-          </section>
+                      </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -76,10 +75,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
-          </section>
+                      </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -97,10 +95,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.90</p>
-            <p class="card-off-price">12.99</p>
-          </section>
+                      </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -118,10 +115,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.90</p>
-            <p class="card-off-price">12.99</p>
-          </section>
+                      </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -139,10 +135,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.90</p>
-            <p class="card-off-price">12.99</p>
-          </section>
+                      </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -160,10 +155,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.90</p>
-            <p class="card-off-price">12.99</p>
-          </section>
+                      </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -181,10 +175,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.90</p>
-            <p class="card-off-price">12.99</p>
-          </section>
+                      </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -202,10 +195,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>15.00</p>
-            <p class="card-off-price">12.99</p>
-          </section>
+                      </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -223,10 +215,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.00</p>
-            <p class="card-off-price">12.99</p>
-          </section>
+                      </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
