--- a/item-pages/Set meal.html
+++ b/item-pages/Set meal.html
@@ -59,10 +59,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>25.50</p>
-            <!-- <p class="card-off-price">12.99</p> -->
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -74,7 +73,7 @@
             src="/assets/images/no-picture.jpg"
             alt="image"
           /> -->
-          <h5 class="card-title">1128 . Set Meal for 4</h5>
+          <h5 class="card-title">128 . Set Meal for 4</h5>
           <p class="card-description">
             4 Starters (choose from 1 - 5) 4 Main Courses: (choose any Four)
             Korma / Bhuna / Curry / Pathia (with chicken, lamb or vegetables)
@@ -84,10 +83,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>51.00</p>
-            <!-- <p class="card-off-price">12.99</p> -->
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -101,15 +99,18 @@
               /> -->
           <h5 class="card-title">Early bird menu</h5>
           <p class="card-description">4PM-6PM Monday-Thursday</p>
-          <p class="card-description">4PM-6PM Monday-Thursday</p>
+          <p class="card-description">
+            starter : poppadom <br />
+            main course: rice or naan bread <br />
+            £15.90 each person. (King Prawns dish £2.00)
+          </p>
         </div>
         <div class="card-bottom">
           <section class="price-section">
-            <p class="card-price"><i class="bi bi-currency-pound"></i>51.00</p>
-            <!-- <p class="card-off-price">12.99</p> -->
+            <p class="card-price"><i class="bi bi-currency-pound"></i>15.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
