--- a/item-pages/appetizers.html
+++ b/item-pages/appetizers.html
@@ -57,10 +57,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>3.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -81,10 +80,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>3.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -105,10 +103,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>3.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -129,10 +126,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>3.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -153,10 +149,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>3.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -177,10 +172,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -201,10 +195,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -225,10 +218,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>4.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -249,10 +241,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -273,10 +264,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -297,10 +287,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -321,10 +310,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -345,10 +333,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -369,10 +356,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -393,10 +379,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -417,10 +402,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>5.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -441,10 +425,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -465,10 +448,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>6.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
