--- a/item-pages/biryanis.html
+++ b/item-pages/biryanis.html
@@ -57,10 +57,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -78,10 +77,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -99,10 +97,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>10.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -120,10 +117,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -141,10 +137,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -162,10 +157,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>9.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -183,10 +177,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>12.50</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
@@ -204,10 +197,9 @@
         <div class="card-bottom">
           <section class="price-section">
             <p class="card-price"><i class="bi bi-currency-pound"></i>8.90</p>
-            <p class="card-off-price">12.99</p>
           </section>
 
-          <a class="card-button" href="">Order Now</a>
+          <a class="card-button" href="tel:028 43758423">Order Now</a>
         </div>
       </div>
       <!-- single card  end-->
