changes home link

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <img class="logo" src="assets/images/logo.png" alt="logo" />
       <!-- navbar -->
       <div class="navbar resNav" id="navbarToggler">
-        <a class="nav-link" href="#home" onclick="hideNev()">Home</a>
-        <a class="nav-link" href="#featuresPage" onclick="hideNev()"
+        <a class="nav-link" href="/" onclick="hideNev()">Home</a>
+        <a class="nav-link" href="/#featuresPage" onclick="hideNev()"
           >features</a
         >
 
@@ -67,7 +67,7 @@
     </div>
     <!--  slider -->
     <!-- Swiper -->
-    <div class="swiper mySwiper fiexed-top-margin" id="home">
+    <div class="swiper mySwiper fiexed-top-margin">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <img
