add booking button to mobile view

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
       </div>
     </div>
     <!-- mobile slider end -->
+    <div class="bookingButton">
+      <a href="tel:028 43758423">Book Your Table</a>
+      <a href="#mainMenu">Order Now</a>
+    </div>
     <!-- section title -->
     <div class="section-title">
       <h2>Our Features Items 🍽</h2>
