--- a/index.html
+++ b/index.html
@@ -526,20 +526,29 @@
     </div>
     <!-- contact -->
     <div class="contact">
-      <img
-        class="contact-image"
-        src="./assets/images/contact-image-min.jpg"
-        alt="image of a phone"
-      />
+      <section>
+        <iframe
+          class="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2339.5663685795917!2d-6.250366684133036!3d54.0991632801437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4860db17e1131759%3A0xf76c79a6a9131b6b!2sSeaview%20Indian%20Masala!5e0!3m2!1sen!2sbd!4v1645869288246!5m2!1sen!2sbd"
+          width="400"
+          height="300"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </section>
+
       <section class="contact-info">
-        <p class="phone"><i class="bi bi-telephone-fill"></i> 028 43758423</p>
-        <p class="location">
-          <i class="bi bi-geo-alt-fill"></i> 13 Warrenpoint, Newry BT34 3NJ,
-          United Kingdom
-        </p>
-        <p class="gmail">
-          <i class="bi bi-envelope-fill"></i> seaviewindianmasala@gmail.com
-        </p>
+        <a class="phone" href="tel:028 43758423"
+          ><i class="bi bi-telephone-fill"></i> 028 43758423</a
+        >
+        <a class="location" href="https://goo.gl/maps/9gxHYYUatVokBa9X7">
+          <i class="bi bi-geo-alt-fill"></i> 13 Seaview, Warrenpoint, Newry
+          Seaview Indian Masala, Seaview, Warrenpoint, Newry BT34 3NJ, United
+          Kingdom
+        </a>
+        <a class="gmail" href="mailto:seaviewindianmasala@gmail.com">
+          <i class="bi bi-envelope-fill"></i> seaviewindianmasala@gmail.com</a
+        >
       </section>
     </div>
     <div class="footer">
