add booking form and new about video and slider iamge

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <img
-            src="./assets/images/slider_image/slider_image_1-min.png"
+            src="./assets/images/slider_image/slider_image_1-min.jpeg"
             alt=""
           />
           <div class="mySlider-info">
@@ -85,7 +85,7 @@
               </p>
             </section>
             <section class="button">
-              <a href="tel:028 43758423">Book your Table</a>
+              <a href="https://forms.gle/NQZMvNLNagoagq8Z9">Book your Table</a>
               <a href="#mainMenu">Order Now</a>
             </section>
           </div>
@@ -138,6 +138,12 @@
             alt=""
           />
         </div>
+        <div class="swiper-slide">
+          <img
+            src="./assets/images/slider_image/slider_image_10-min.png"
+            alt=""
+          />
+        </div>
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
@@ -148,7 +154,7 @@
     </div>
     <!-- mobile slider end -->
     <div class="bookingButton">
-      <a href="tel:028 43758423">Book Your Table</a>
+      <a href="https://forms.gle/NQZMvNLNagoagq8Z9">Book Your Table</a>
       <a href="#mainMenu">Order Now</a>
     </div>
     <!-- section title -->
@@ -536,7 +542,6 @@
           loading="lazy"
         ></embed>
       </div>
-
       <section class="contact-info">
         <a class="phone" href="tel:028 43758423"
           ><i class="bi bi-telephone-fill"></i> 028 43758423</a
