make some css changes and fixed image link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="card-item">
       <div class="card-top">
         <img class="card-image"
-          src="/assets/images/no-picture.jpg"
+          src="./assets/images/no-picture.jpg"
           alt="product_image" />
         <h5 class="card-title">26.Seaview Special</h5>
         <p class="card-description">
@@ -152,7 +152,7 @@
     <div class="card-item">
       <div class="card-top">
         <img class="card-image"
-          src="/assets/images/no-picture.jpg"
+          src="./assets/images/no-picture.jpg"
           alt="product_image" />
         <h5 class="card-title">33. Hariyali lamb</h5>
         <p class="card-description">
@@ -174,7 +174,7 @@
     <div class="card-item">
       <div class="card-top">
         <img class="card-image"
-          src="/assets/images/no-picture.jpg"
+          src="./assets/images/no-picture.jpg"
           alt="product_image" />
         <h5 class="card-title">38. King Prawn Jhinga</h5>
         <p class="card-description">
@@ -195,7 +195,7 @@
     <div class="card-item">
       <div class="card-top">
         <img class="card-image"
-          src="/assets/images/no-picture.jpg"
+          src="./assets/images/no-picture.jpg"
           alt="product_image" />
         <h5 class="card-title">34. Sylheti Chicken</h5>
         <p class="card-description">
@@ -217,7 +217,7 @@
     <div class="card-item">
       <div class="card-top">
         <img class="card-image"
-          src="/assets/images/no-picture.jpg"
+          src="./assets/images/no-picture.jpg"
           alt="product_image" />
         <h5 class="card-title">23.Ginger Chicken</h5>
         <p class="card-description">
@@ -239,7 +239,7 @@
     <div class="card-item">
       <div class="card-top">
         <img class="card-image"
-          src="/assets/images/no-picture.jpg"
+          src="./assets/images/no-picture.jpg"
           alt="product_image" />
         <h5 class="card-title">27.Sharia Chicken</h5>
         <p class="card-description">
@@ -261,7 +261,7 @@
     <div class="card-item">
       <div class="card-top">
         <img class="card-image"
-          src="/assets/images/no-picture.jpg"
+          src="./assets/images/no-picture.jpg"
           alt="product_image" />
         <h5 class="card-title">30. Chicken Jaflong</h5>
         <p class="card-description">
