add target blank to book table button

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </p>
           </section>
           <section class="button">
-            <a href="https://forms.gle/NQZMvNLNagoagq8Z9">Book your Table</a>
+            <a href="https://forms.gle/NQZMvNLNagoagq8Z9" target="_blank">Book your Table</a>
             <a href="#mainMenu">Order Now</a>
           </section>
         </div>
@@ -116,7 +116,7 @@
   </div>
   <!-- mobile slider end -->
   <div class="bookingButton">
-    <a href="https://forms.gle/NQZMvNLNagoagq8Z9">Book Your Table</a>
+    <a href="https://forms.gle/NQZMvNLNagoagq8Z9" target="_blank">Book Your Table</a>
     <a href="#mainMenu">Order Now</a>
   </div>
   <!-- section title -->
